# assistant

./: .envrc  .gitignore  README.md  assistant.py  bot-discord.py  bot.py  discord-test.py  matrix-test.py  pyproject.toml  rxbot.py  swarm.py  venv-rebuild.sh  venv-refresh.sh
_archive/_assistant/: __init__.py
_archive/dev-ui.archive/: package-lock.json  package.json
_archive/dev_ui/: .$ui_mockup.drawio.dtmp  README.md  pubspec.yaml  ui_mockup.drawio
_assistant/conversation/: memory.py
assistant/: __init__.py  _misc.py  entity.py  openai.py  transcript.py
assistant/conversation/: __init__.py  flow.py
assistant/ipc/: __init__.py  channel.py  utils.py
assistant/knowledge_base/: __init__.py  chat.py
assistant/llm/: openai.py
assistant/social_system_framework/: __init__.py  external.py
assistant/storage/: __init__.py  couchdb.py
bot-network/: README.md  commands-i-ran.fish  ec2-cloud-config.yml  k3s-traefik-ping-endpoint.yaml
bot-network/cert-manager/: acme-challenge.yaml  acme-staging-challenge.yaml  k8s-app.yaml  test-cert.yaml  test-staging-cert.yaml
bot-network/headscale/: k8s-app.yaml
bot-network/matrix/: k8s-app.yaml
conversation/: transcript.py
docs/: bot-conversation-architecture.drawio  highlevel-design.md
docs/docs/: guidelines.md  template.md
docs/ipc/: 00_Specification.md  01_Plan-of-Action.md  Milestone01-Feature01-Task01.md  Milestone01-Feature01-Task02.md  Milestone01-Feature02-Task01.md  Milestone01-Feature02-Task02.md  problem-statement.md  vision-statement.md
lib/: assistant  conversation  rxbot.py
lib/dev-ui/: index.html  main.js
meta/: chain.py  design.md  prompt.py
meta/chain/: sme-descriptions.json
meta/data/: dev-ui.md  rx-pipeline.md
meta/outputs/: heuristics-prompt.md  ipc-utils-docs.md
utils/: __init__.py  ipc.py
(+48 files in other folders)
